# pg_ttd

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
docs/: finance.md  pathfinding.md  procs.md  schema.md  sprites.md  vehicles.md
pgttd/: __init__.py  create_vehicle.py  db.py  generate_sprites.py  run_tick.py
renderer/: cli_viewer.py
reports/: balance_sheet.sql
scripts/: __init__.py  benchmark_move_vehicles.py  create_vehicle.py  generate_schema.py  postgres_coverage.py  run_tick.py
sql/: schema.sql  seed_sprites.sql  sprites.sql  tests.sql
sql/procs/: economy_tick.sql  move_vehicles.sql  new_game.sql  pathfinding.sql  tick.sql  update_balances.sql  vehicle_movement.sql
sql/schema/: companies.sql
sql/tables/: companies.sql  game_state.sql  industries.sql  industry_outputs.sql  resource_industries.sql  resource_rules.sql  resources.sql  terrain.sql  tiles.sql  vehicle_operations.sql  vehicles.sql
sql/tests/: economy_tick.sql  move_vehicles.sql  move_vehicles_null_schedule_idx.sql  pathfinding.sql  tick.sql  update_balances.sql  vehicle_movement.sql  vehicles.sql
tests/: helpers.py  test_cli_viewer_config.py  test_cli_viewer_fetch_tiles.py  test_create_vehicle.py  test_generate_sprites.py  test_renderer_memory.py  test_run_tick.py
tools/: __init__.py  generate_sprites.py
