[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pgttd"
version = "0.1.0"
description = "PG TTD utilities"
authors = [{name = "PG TTD"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["pgttd*"]

[tool.pytest.ini_options]
pythonpath = ["."]
